--- a/app/view/home.html
+++ b/app/view/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>硅基API Key聚合管理系统</title>
+    <title>Gemini API Key聚合管理系统</title>
     <link rel="icon" type="image/png" href="https://imgbed.killerbest.com/file/1742260658545_siliconcloud-color.png" />
     <link rel="stylesheet" href="/css/home.css">
 </head>
