--- a/app/public/css/admin.css
+++ b/app/public/css/admin.css
@@ -867,9 +867,9 @@ tbody tr:hover {
 
 /* 增加多选功能样式 */
 .key-checkbox {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    /* position: absolute; */
+    /* top: 10px; */
+    /* right: 10px; */
     width: 18px;
     height: 18px;
     cursor: pointer;
