--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -879,8 +879,9 @@ h1 {
     font-size: 0.9rem;
     line-height: 1.6;
     overflow-x: auto;
-    white-space: pre-wrap;
-    word-break: break-word;
+    white-space: pre;
+    tab-size: 2;
+    -moz-tab-size: 2;
 }
 
 .api-code .comment {
